test/invalid/syntactic/unclosed_brace.sysml
// INVALID: Unclosed brace
// EXPECTED: Parse error
package Test {
    part def Foo {
